fix:overflow in index.css

--- a/src/index.css
+++ b/src/index.css
@@ -4,6 +4,7 @@ body,html{
     color:white;
     font-family: 'Montserrat', sans-serif;
     margin: 0;
+    position: relative;
 }
 ::placeholder{
     margin-top: 5px;
